# PTD3-SERVER

./: .env.example  .gitignore  Discovery.md  LICENSE  README.md  Spacefile  pyproject.toml  requirements.txt  swf-mod.txt
src/: .env  __main__.py  index.html  local.py  main.py  manage_save.py  manual_test.py  manual_testing.py  request_handler.py  requirements.txt  style.css
src/database/: __init__.py  _local_base.py  base_class.py  bound_meta.py  database.py  exceptions.py  query.py  record.py
src/models/: data_numbers.py  extractor.py  extras_2.py  items.py  networking.py  pokemon.py  profile.py
src/static/: crossdomain.xml  mod_instructions.txt
src/static/css/: style.css
src/templates/: index.html
src/tests/: conftest.py  test_data_numbers.py  test_database.py  test_wsgi.py
src/tests/pokemons/: conftest.py  test_poke_loader.py
src/tests/profiles/: conftest.py  test_profile.py
